✨ feat: Estilizando a primeira secao (estilo padrao das secoes)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boi encanto da Natureza</title>
-</head>
-<body>
-    
-    Boi encanto
-</body> 
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <section>
+      <div>
+        <h1>Boi Encanto da Natureza</h1>
+        <p>Desde 2015 abrilhantando os arraiás MARANHENSES</p>
+
+        <div>
+          <button>Saiba Mais</button>
+          <button>Youtube</button>
+        </div>
+      </div>
+      <div>
+        <img src="assets/images/sections/logo-encanto-da-natureza.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
