✨ feat: Adicionado cards sem estilo ao html e estilizando secao principal

--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <body>
     <section>
       <div>
-        <h1>Boi Encanto da Natureza</h1>
+        <h1>
+          Boi Encanto<br />
+          da Natureza
+        </h1>
         <p>Desde 2015 abrilhantando os arraiás MARANHENSES</p>
 
         <div>
-          <button>Saiba Mais</button>
+          <button id="about-us-button" class="primary-button">
+            Saiba Mais
+          </button>
           <button>Youtube</button>
         </div>
       </div>
@@ -22,5 +27,24 @@
         <img src="assets/images/sections/logo-encanto-da-natureza.png" alt="" />
       </div>
     </section>
+    <div class="cards-container">
+      <div class="card">
+        <i>fontAwesomeIcon</i>
+        <h2>historia</h2>
+        <p>Ha mais de 10 anos nos arraias</p>
+      </div>
+
+      <div class="card">
+        <i>fontAwesomeIcon</i>
+        <h2>historia</h2>
+        <p>Ha mais de 10 anos nos arraias</p>
+      </div>
+
+      <div class="card">
+        <i>fontAwesomeIcon</i>
+        <h2>historia</h2>
+        <p>Ha mais de 10 anos nos arraias</p>
+      </div>
+    </div>
   </body>
 </html>
