✨ feat: Adicionado os icones do FontAwesome aos cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Boi encanto da Natureza</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/regular.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
   <body>
     <section>
@@ -29,19 +32,19 @@
     </section>
     <div class="cards-container">
       <div class="card">
-        <i>fontAwesomeIcon</i>
+        <i class="fa-solid fa-calendar-days"></i>
         <h2>historia</h2>
         <p>Ha mais de 10 anos nos arraias</p>
       </div>
 
       <div class="card">
-        <i>fontAwesomeIcon</i>
+        <i class="fa-solid fa-calendar-days"></i>
         <h2>historia</h2>
         <p>Ha mais de 10 anos nos arraias</p>
       </div>
 
       <div class="card">
-        <i>fontAwesomeIcon</i>
+        <i class="fa-solid fa-calendar-days"></i>
         <h2>historia</h2>
         <p>Ha mais de 10 anos nos arraias</p>
       </div>
