✨ feat: Cards estilizados e 'prontos' (falta as descrições)

--- a/index.html
+++ b/index.html
@@ -32,21 +32,27 @@
     </section>
     <div class="cards-container">
       <div class="card">
-        <i class="fa-solid fa-calendar-days"></i>
-        <h2>historia</h2>
-        <p>Ha mais de 10 anos nos arraias</p>
+        <div class="card__icon">
+          <i class=" fa-solid fa-calendar-days"></i>
+        </div>
+        <h2 class="card__title">historia</h2>
+        <p class="card__description">Ha mais de 10 anos nos arraias</p>
       </div>
 
       <div class="card">
-        <i class="fa-solid fa-calendar-days"></i>
-        <h2>historia</h2>
-        <p>Ha mais de 10 anos nos arraias</p>
+        <div class="card__icon">
+          <i class="fa-solid fa-user-group"></i>
+        </div>
+        <h2 class="card__title">impacto</h2>
+        <p class="card__description">Ha mais de 10 anos nos arraias</p>
       </div>
 
       <div class="card">
-        <i class="fa-solid fa-calendar-days"></i>
-        <h2>historia</h2>
-        <p>Ha mais de 10 anos nos arraias</p>
+        <div class="card__icon">
+          <i class="fa-solid fa-book-bookmark"></i>
+        </div>
+        <h2 class="card__title">tradição</h2>
+        <p class="card__description">aaaaaaaaaaaaaaaaaaaaaaaaasasasa sasasasa saasa</p>
       </div>
     </div>
   </body>
