feat: Botão "Youtube" criado e quase todo estilizado (sem eventos)

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
           Boi Encanto<br />
           da Natureza
         </h1>
-        <p>Desde 2015 abrilhantando os arraiás MARANHENSES</p>
+        <p class="main-section__description">Desde 2015 abrilhantando os arraiás MARANHENSES</p>
 
         <div>
           <button id="about-us-button" class="primary-button">
             Saiba Mais
           </button>
-          <button>Youtube</button>
+          <button class="main-section__youtube-button">
+            <span>Veja nossos videos</span>
+            <i class="youtube-button__icon fa-solid fa-play"></i>
+          </button>
         </div>
       </div>
       <div>
