feat: Cards prontos (as "mensagens" podem mudar) e estilizados

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           Boi Encanto<br />
           da Natureza
         </h1>
-        <p class="main-section__description">Desde 2015 abrilhantando os arraiás MARANHENSES</p>
+        <p class="main-section__description">descricao</p>
 
         <div>
           <button id="about-us-button" class="primary-button">
@@ -39,7 +39,7 @@
           <i class=" fa-solid fa-calendar-days"></i>
         </div>
         <h2 class="card__title">historia</h2>
-        <p class="card__description">Ha mais de 10 anos nos arraias</p>
+        <p class="card__description">Desde 2015 abrilhantando os arraiás MARANHENSES</p>
       </div>
 
       <div class="card">
@@ -47,7 +47,7 @@
           <i class="fa-solid fa-user-group"></i>
         </div>
         <h2 class="card__title">impacto</h2>
-        <p class="card__description">Ha mais de 10 anos nos arraias</p>
+        <p class="card__description">Oferecemos um espaço de brincadeiras, amizade e FAMILIA, ajudando desde crianças a adultos</p>
       </div>
 
       <div class="card">
@@ -55,7 +55,7 @@
           <i class="fa-solid fa-book-bookmark"></i>
         </div>
         <h2 class="card__title">tradição</h2>
-        <p class="card__description">aaaaaaaaaaaaaaaaaaaaaaaaasasasa sasasasa saasa</p>
+        <p class="card__description">Mantendo os contos indigenas mantemos o seu legado para as proximas gerações</p>
       </div>
     </div>
   </body>
