feat: Iniciando a criacao das seções "galeria" e "sobre-nos"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
   <body>
-    <section>
+    <section class="main-section">
       <div>
         <h1>
           Boi Encanto<br />
@@ -58,5 +58,29 @@
         <p class="card__description">Mantendo os contos indigenas mantemos o seu legado para as proximas gerações</p>
       </div>
     </div>
+    <section class="gallery-section">
+      <div class="gallery-section__header">
+        <h1>nossa galeria</h1>
+        <p>description da galeria</p>
+      </div>
+      <div>
+        galeria
+      </div>
+      <button class="primary-button">mostrar mais</button>
+    </section>
+    <section>
+      <div>
+        <img src="assets/images/sections/logo-encanto-da-natureza.png" alt="" />
+      </div>
+      <div>
+        <h1>sobre nós</h1>
+        <p class="main-section__description">descricao</p>
+
+         
+        <button id="about-us-button" class="primary-button">
+            Saiba Mais
+        </button> 
+      </div>
+    </section>
   </body>
 </html>
