--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
     <section class="gallery-section">
       <div class="gallery-section__header">
         <h1>nossa galeria</h1>
-        <p>description da galeria</p>
+        <p>nossas fotos durante apresentações</p>
       </div>
       <div>
         galeria
       </div>
-      <button class="primary-button">mostrar mais</button>
+      <div class="gallery-section__show-more-button-container">
+        <button class="primary-button">mostrar mais</button>
+      </div>
     </section>
     <section>
       <div>
