feat: Galeria quase pronta, iniciando a seção "sobre-nos"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         </div>
       </div>
       <div>
-        <img src="assets/images/sections/logo-encanto-da-natureza.png" alt="" />
+        <figure>
+          <img alt="Logomarca do grupo folclórico Boi Encanto da Natureza" class="section-image" src="assets/images/sections/logo-encanto-da-natureza.png" />
+          <figcaption>Logomarca do grupo folclórico Boi Encanto da Natureza</figcaption>
+        </figure>    
       </div>
     </section>
     <div class="cards-container">
@@ -63,25 +66,96 @@
         <h1>nossa galeria</h1>
         <p>nossas fotos durante apresentações</p>
       </div>
-      <div>
-        galeria
+      <div class="gallery-section__gallery-container">
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery1.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery2.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery3.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery4.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery5.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery6.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery7.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery8.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery9.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery10.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery11.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery12.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery13.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery14.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery15.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery16.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery17.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery18.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure>
+        <figure>
+         <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery19.jpg" >
+          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
+        </figure><
       </div>
       <div class="gallery-section__show-more-button-container">
         <button class="primary-button">mostrar mais</button>
       </div>
     </section>
-    <section>
-      <div>
-        <img src="assets/images/sections/logo-encanto-da-natureza.png" alt="" />
-      </div>
+    <section class="main-section">
+      <figure>
+        <img alt="Logomarca do grupo folclórico Boi Encanto da Natureza" class="section-image" src="assets/images/sections/logo-encanto-da-natureza.png" />
+        <figcaption>Logomarca do grupo folclórico Boi Encanto da Natureza</figcaption>
+      </figure> 
       <div>
         <h1>sobre nós</h1>
         <p class="main-section__description">descricao</p>
-
-         
-        <button id="about-us-button" class="primary-button">
-            Saiba Mais
-        </button> 
       </div>
     </section>
   </body>
