feat: Seção "sobre-nos" quase pronta (falta mudar a imagem)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/styles.css" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/regular.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/regular.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <section class="main-section">
@@ -17,7 +23,12 @@
           Boi Encanto<br />
           da Natureza
         </h1>
-        <p class="main-section__description">descricao</p>
+        <p class="section-description">
+          Por meio dos espetáculos o grupo folclórico <strong>Boi Encanto da Natureza</strong>
+          busca <strong>re-introduzir</strong>, principalmente, <strong>jovens</strong> (em sua maioria, pobre) <strong>à
+          sociedade</strong> onde, muitas vezes de maneira preconceituosa, são ignorados
+          e excluídos
+        </p>
 
         <div>
           <button id="about-us-button" class="primary-button">
@@ -31,18 +42,26 @@
       </div>
       <div>
         <figure>
-          <img alt="Logomarca do grupo folclórico Boi Encanto da Natureza" class="section-image" src="assets/images/sections/logo-encanto-da-natureza.png" />
-          <figcaption>Logomarca do grupo folclórico Boi Encanto da Natureza</figcaption>
-        </figure>    
+          <img
+            alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
+            class="section-image"
+            src="assets/images/sections/logo-encanto-da-natureza.png"
+          />
+          <figcaption>
+            Logomarca do grupo folclórico Boi Encanto da Natureza
+          </figcaption>
+        </figure>
       </div>
     </section>
     <div class="cards-container">
       <div class="card">
         <div class="card__icon">
-          <i class=" fa-solid fa-calendar-days"></i>
+          <i class="fa-solid fa-calendar-days"></i>
         </div>
         <h2 class="card__title">historia</h2>
-        <p class="card__description">Desde 2015 abrilhantando os arraiás MARANHENSES</p>
+        <p class="card__description">
+          Desde 2015 abrilhantando os arraiás MARANHENSES
+        </p>
       </div>
 
       <div class="card">
@@ -50,7 +69,10 @@
           <i class="fa-solid fa-user-group"></i>
         </div>
         <h2 class="card__title">impacto</h2>
-        <p class="card__description">Oferecemos um espaço de brincadeiras, amizade e FAMILIA, ajudando desde crianças a adultos</p>
+        <p class="card__description">
+          Oferecemos um espaço de brincadeiras, amizade e FAMILIA, ajudando
+          desde crianças a adultos
+        </p>
       </div>
 
       <div class="card">
@@ -58,7 +80,10 @@
           <i class="fa-solid fa-book-bookmark"></i>
         </div>
         <h2 class="card__title">tradição</h2>
-        <p class="card__description">Mantendo os contos indigenas mantemos o seu legado para as proximas gerações</p>
+        <p class="card__description">
+          Mantendo os contos indigenas mantemos o seu legado para as proximas
+          gerações
+        </p>
       </div>
     </div>
     <section class="gallery-section">
@@ -68,81 +93,158 @@
       </div>
       <div class="gallery-section__gallery-container">
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery1.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery1.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery2.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery2.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery3.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery3.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery4.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery4.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery5.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery5.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery6.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery6.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery7.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery7.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery8.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery8.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery9.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery9.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery10.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery10.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery11.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery11.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery12.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery12.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery13.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery13.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery14.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery14.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery15.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery15.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery16.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery16.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery17.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery17.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-          <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery18.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery18.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
         </figure>
         <figure>
-         <img class="gallery-container__gallery-image" alt="imagem-da-galeria-durante-apresentação" src="/assets/images/gallery/gallery19.jpg" >
+          <img
+            class="gallery-container__gallery-image"
+            alt="imagem-da-galeria-durante-apresentação"
+            src="/assets/images/gallery/gallery19.jpg"
+          />
           <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure><
+        </figure>
+        <
       </div>
       <div class="gallery-section__show-more-button-container">
         <button class="primary-button">mostrar mais</button>
@@ -150,12 +252,24 @@
     </section>
     <section class="main-section">
       <figure>
-        <img alt="Logomarca do grupo folclórico Boi Encanto da Natureza" class="section-image" src="assets/images/sections/logo-encanto-da-natureza.png" />
-        <figcaption>Logomarca do grupo folclórico Boi Encanto da Natureza</figcaption>
-      </figure> 
+        <img
+          alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
+          class="section-image"
+          src="assets/images/sections/logo-encanto-da-natureza.png"
+        />
+        <figcaption>
+          Logomarca do grupo folclórico Boi Encanto da Natureza
+        </figcaption>
+      </figure>
       <div>
         <h1>sobre nós</h1>
-        <p class="main-section__description">descricao</p>
+        <p class="section-description">
+          Criado em <strong>05 de abril 2005</strong>, pela senhora <strong>Fátima Cruz</strong> para
+          inclusão das minorias do <strong>povoado Livramento</strong> nas brincadeiras juninas.
+          Composto por brincantes das mais diversas faixas etárias, de crianças
+          à adultos, tem, como sua <strong>finalidade</strong>, a <strong>inclusão e interação</strong> entre
+          brincantes e sociadade além, claro, da <strong>preservação da cultura</strong> indigena.
+        </p>
       </div>
     </section>
   </body>
