--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
           da Natureza
         </h1>
         <p class="section-description">
-          Por meio dos espetáculos o grupo folclórico <strong>Boi Encanto da Natureza</strong>
-          busca <strong>re-introduzir</strong>, principalmente, <strong>jovens</strong> (em sua maioria, pobre) <strong>à
-          sociedade</strong> onde, muitas vezes de maneira preconceituosa, são ignorados
-          e excluídos
+          Por meio dos espetáculos o grupo folclórico
+          <strong>Boi Encanto da Natureza</strong> busca
+          <strong>re-introduzir</strong>, principalmente,
+          <strong>jovens</strong> (em sua maioria, pobre)
+          <strong>à sociedade</strong> onde, muitas vezes de maneira
+          preconceituosa, são ignorados e excluídos
         </p>
 
         <div>
@@ -92,159 +94,119 @@
         <p>nossas fotos durante apresentações</p>
       </div>
       <div class="gallery-section__gallery-container">
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery1.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery2.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery3.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery4.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery5.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery6.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery7.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery8.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery9.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery10.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery11.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery12.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery13.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery14.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery15.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery16.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery17.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery18.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <figure>
-          <img
-            class="gallery-container__gallery-image"
-            alt="imagem-da-galeria-durante-apresentação"
-            src="/assets/images/gallery/gallery19.jpg"
-          />
-          <figcaption>imagem-da-galeria-durante-apresentação</figcaption>
-        </figure>
-        <
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery1.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery2.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery3.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery4.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery5.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery6.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery7.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery8.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery9.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery10.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery11.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery12.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery13.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery14.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery15.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery16.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery17.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery18.jpg"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery19.jpg"
+        />
       </div>
       <div class="gallery-section__show-more-button-container">
         <button class="primary-button">mostrar mais</button>
@@ -264,11 +226,13 @@
       <div>
         <h1>sobre nós</h1>
         <p class="section-description">
-          Criado em <strong>05 de abril 2005</strong>, pela senhora <strong>Fátima Cruz</strong> para
-          inclusão das minorias do <strong>povoado Livramento</strong> nas brincadeiras juninas.
-          Composto por brincantes das mais diversas faixas etárias, de crianças
-          à adultos, tem, como sua <strong>finalidade</strong>, a <strong>inclusão e interação</strong> entre
-          brincantes e sociadade além, claro, da <strong>preservação da cultura</strong> indigena.
+          Criado em <strong>05 de abril 2005</strong>, pela senhora
+          <strong>Fátima Cruz</strong> para inclusão das minorias do
+          <strong>povoado Livramento</strong> nas brincadeiras juninas. Composto
+          por brincantes das mais diversas faixas etárias, de crianças à
+          adultos, tem, como sua <strong>finalidade</strong>, a
+          <strong>inclusão e interação</strong> entre brincantes e sociadade
+          além, claro, da <strong>preservação da cultura</strong> indigena.
         </p>
       </div>
     </section>
