feat: Iniciando a secao de doacoes

--- a/index.html
+++ b/index.html
@@ -213,16 +213,11 @@
       </div>
     </section>
     <section class="main-section">
-      <figure>
-        <img
-          alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
-          class="section-image"
-          src="assets/images/sections/logo-encanto-da-natureza.png"
-        />
-        <figcaption>
-          Logomarca do grupo folclórico Boi Encanto da Natureza
-        </figcaption>
-      </figure>
+      <img
+        alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
+        class="section-image"
+        src="assets/images/sections/logo-encanto-da-natureza.png"
+      />
       <div>
         <h1>sobre nós</h1>
         <p class="section-description">
@@ -235,6 +230,25 @@
           além, claro, da <strong>preservação da cultura</strong> indigena.
         </p>
       </div>
+    </section>
+    <section class="main-section">
+      <div>
+        <h1>doacoes</h1>
+        <p class="section-description">
+          Criado em <strong>05 de abril 2005</strong>, pela senhora
+          <strong>Fátima Cruz</strong> para inclusão das minorias do
+          <strong>povoado Livramento</strong> nas brincadeiras juninas. Composto
+          por brincantes das mais diversas faixas etárias, de crianças à
+          adultos, tem, como sua <strong>finalidade</strong>, a
+          <strong>inclusão e interação</strong> entre brincantes e sociadade
+          além, claro, da <strong>preservação da cultura</strong> indigena.
+        </p>
+      </div>
+      <img
+        alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
+        class="section-image"
+        src="assets/images/sections/logo-encanto-da-natureza.png"
+      />
     </section>
   </body>
 </html>
