feat: Adicionando o qrcode do pix e finalizando secao de doacoes

--- a/index.html
+++ b/index.html
@@ -233,22 +233,25 @@
     </section>
     <section class="main-section">
       <div>
-        <h1>doacoes</h1>
+        <h1>doações</h1>
         <p class="section-description">
-          Criado em <strong>05 de abril 2005</strong>, pela senhora
-          <strong>Fátima Cruz</strong> para inclusão das minorias do
-          <strong>povoado Livramento</strong> nas brincadeiras juninas. Composto
-          por brincantes das mais diversas faixas etárias, de crianças à
-          adultos, tem, como sua <strong>finalidade</strong>, a
-          <strong>inclusão e interação</strong> entre brincantes e sociadade
-          além, claro, da <strong>preservação da cultura</strong> indigena.
+          <strong>Estamos contando com você!</strong> Sua doação faz toda a
+          diferença para preservarmos as raízes do nosso grupo folclórico. Seja
+          parte ativa da nossa história, contribua agora e fortaleça a cultura
+          que amamos.
+          <strong>Agradecemos por seu apoio!</strong>
         </p>
       </div>
-      <img
-        alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
-        class="section-image"
-        src="assets/images/sections/logo-encanto-da-natureza.png"
-      />
+      <div class="qrcode-container">
+        <img
+          alt="Qrcode do pix para doações"
+          class="section-image qrcode-container__qrcode-image"
+          src="assets/images/sections/qrcode-pix-eliana.png"
+        />
+        <span class="qrcode-container__qrcode-caption">
+          Pix: Eliana de Jesus Ferreira
+        </span>
+      </div>
     </section>
   </body>
 </html>
