--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         />
       </div>
       <div class="gallery-section__show-more-button-container">
-        <button class="primary-button">mostrar mais</button>
+        <button class="primary-button show-more-button">mostrar mais</button>
       </div>
     </section>
     <div class="cards-container">
@@ -212,7 +212,7 @@
         </p>
       </div>
     </div>
-    <section class="main-section">
+    <section class="main-section about-section">
       <img
         alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
         class="section-image"
