feat: Html do footer feito, iniciando o css

--- a/index.html
+++ b/index.html
@@ -253,5 +253,19 @@
         </span>
       </div>
     </section>
+    <footer>
+      <span class="footer__title">Boi Encanto da Natureza</span>
+      <nav class="footer__navigation-container">
+        <span class="navigation-container__nav-item">inicio</span>
+        <span class="navigation-container__nav-item">galeria</span>
+        <span class="navigation-container__nav-item">sobre nos</span>
+        <span class="navigation-container__nav-item">doacoes</span>
+      </nav>
+      <div class="footer__social-icons-container">
+        <i>insta</i>
+        <i>yt</i>
+      </div>
+      <small class="footer-copy">Boi Encanto da Natureza &copy; 2024</small>
+    </footer>
   </body>
 </html>
