feat: Footer completo (sem micro-interacores)

--- a/index.html
+++ b/index.html
@@ -254,16 +254,22 @@
       </div>
     </section>
     <footer>
-      <span class="footer__title">Boi Encanto da Natureza</span>
       <nav class="footer__navigation-container">
         <span class="navigation-container__nav-item">inicio</span>
         <span class="navigation-container__nav-item">galeria</span>
         <span class="navigation-container__nav-item">sobre nos</span>
         <span class="navigation-container__nav-item">doacoes</span>
       </nav>
-      <div class="footer__social-icons-container">
-        <i>insta</i>
-        <i>yt</i>
+      <div class="footer__contact-info">
+        <i class="fa-solid fa-location-dot"></i>
+        <span>
+          Avenida Nossa Senhora do Livramento, S/N, POV. LIVRAMENTO,
+          Carutapera-MA
+        </span>
+      </div>
+      <div class="footer__contact-info">
+        <i class="fa-solid fa-phone"></i>
+        <span>(98) 98566-4496</span>
       </div>
       <small class="footer-copy">Boi Encanto da Natureza &copy; 2024</small>
     </footer>
