feat: Mudanca semantica no botao que leva ao youtube e galeria 'pronta'

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
           <button id="about-us-button" class="primary-button">
             Saiba Mais
           </button>
-          <button class="main-section__youtube-button">
+          <a
+            href="https://google.com"
+            target="_blank"
+            class="main-section__youtube-button"
+          >
             <span>Veja nossos videos</span>
             <i class="youtube-button__icon fa-solid fa-play"></i>
-          </button>
+          </a>
         </div>
       </div>
       <div>
@@ -176,7 +180,9 @@
         />
       </div>
       <div class="gallery-section__show-more-button-container">
-        <button class="primary-button show-more-button">mostrar mais</button>
+        <button id="show-more-button" class="primary-button show-more-button">
+          mostrar mais
+        </button>
       </div>
     </section>
     <div class="cards-container">
