feat: Header feito, deixei pra fazer depois do footer (que ironia)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     />
   </head>
   <body>
+    <header>
+      <span>Boi Encanto da Natureza</span>
+      <nav class="header__navigation-container">
+        <span id="header-home-nav" class="navigation-container__nav-item">
+          inicio
+        </span>
+        <span id="header-gallery-nav" class="navigation-container__nav-item">
+          galeria
+        </span>
+
+        <span id="header-about-us-nav" class="navigation-container__nav-item">
+          sobre nos
+        </span>
+
+        <span id="header-donation-nav" class="navigation-container__nav-item">
+          doacoes
+        </span>
+      </nav>
+    </header>
     <section id="main-section" class="main-section">
       <div>
         <h1>
@@ -253,16 +272,20 @@
     </section>
     <footer>
       <nav class="footer__navigation-container">
-        <span id="home-nav" class="navigation-container__nav-item">inicio</span>
-        <span id="gallery-nav" class="navigation-container__nav-item"
-          >galeria</span
-        >
-        <span id="about-us-nav" class="navigation-container__nav-item"
-          >sobre nos</span
-        >
-        <span id="donation-nav" class="navigation-container__nav-item"
-          >doacoes</span
-        >
+        <span id="footer-home-nav" class="navigation-container__nav-item">
+          inicio
+        </span>
+        <span id="footer-gallery-nav" class="navigation-container__nav-item">
+          galeria
+        </span>
+
+        <span id="footer-about-us-nav" class="navigation-container__nav-item">
+          sobre nos
+        </span>
+
+        <span id="footer-donation-nav" class="navigation-container__nav-item">
+          doacoes
+        </span>
       </nav>
       <div class="footer__contact-info">
         <i class="fa-solid fa-location-dot"></i>
